# LogBook

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2020-11-18-204834_create_logs/: up.sql
src/: api.rs  database.rs  log_book_item.rs  main.rs  tests.rs
src/db/: models.rs  schema.rs
static/: index.html  logbook_api.js  logbook_builder.js  logbook_entry.js  style.css
