[package]
name = "log_book"
version = "0.1.0"
authors = ["Ryan Wicks <ryancwicks@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", default-features=false, features = ["sqlite"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_sqlite_pool", "json"]
