[package]
name = "log_book"
version = "0.1.0"
authors = ["Ryan Wicks <ryancwicks@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_sqlite_pool", "json", "serve"]
